--- a/css/styles.css
+++ b/css/styles.css
@@ -38,9 +38,24 @@ p {
 
 a {
   color: #E6DDC4;
+  padding: 10px 20px;
+  text-decoration: none;
+}
+a:hover {
+  color: #181D31;
 }
 
 
+
+.contact-me {
+  margin-top: 40px;
+  margin-bottom: 50px;
+
+}
+
+.contact-text {
+  padding-bottom: 25px;
+}
 
 .top {
   padding-left: 5px;
@@ -53,19 +68,66 @@ a {
 }
 
 .bottom {
-
+  background-color: #678983;
+  padding: 15px 0 10px;
 }
 
 .bottom-cloud {
   position: absolute;
 }
 
+.btn {
+  background: #F0E9D2;
+  background-image: -webkit-linear-gradient(top, #F0E9D2, #E6DDC4);
+  background-image: -moz-linear-gradient(top, #F0E9D2, #E6DDC4);
+  background-image: -ms-linear-gradient(top, #F0E9D2, #E6DDC4);
+  background-image: -o-linear-gradient(top, #F0E9D2, #E6DDC4);
+  background-image: linear-gradient(to bottom, #F0E9D2, #E6DDC4);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: 'Roboto Slab';
+  color: #181D31;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #678983;
+  background-image: -webkit-linear-gradient(top, #678983, #181D31);
+  background-image: -moz-linear-gradient(top, #678983, #181D31);
+  background-image: -ms-linear-gradient(top, #678983, #181D31);
+  background-image: -o-linear-gradient(top, #678983, #181D31);
+  background-image: linear-gradient(to bottom, #678983, #181D31);
+  text-decoration: none;
+}
+
 .top-cloud {
   margin-left: 400px;
 }
 
-.skill-img {
-  width: 200px;
-  height: 200px;
+.skill-img-1 {
+  width: 180px;
+  height: 180px;
   border-radius: 100%;
+  float: left;
+  margin-right: 20px;
+}
+
+.skill-img-2 {
+  width: 180px;
+  height: 180px;
+  border-radius: 100%;
+  float: right;
+  margin-left: 20px;
+}
+
+.skill-row-1 {
+  line-height: 1.5;
+  margin: 25px auto 5px auto;
+  width: 50%;
+  text-align: left;
+  padding-top: 50px;
+
 }
